--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <script>
   /* 게임 설정 및 문제 데이터 */
   const gameConfig = {
-    "gameTitle": "유리수와 순환소수 빈출(6)",
+    "gameTitle": "순환소수 분수표현 빈출(1)",
     "defaultScore": 10,
     "bannerURL": "",
     "randomizeQuestions": true,
